# lepola

./: .cursorrules  .gitignore  DATABASE_TIMEOUT_FIX.md  INGESTION_PLAN.md  INITIAL_PLAN.org  ISSUES.org  README.md  TIMEOUT_FIX.md  conftest.py  env.example  legal_doc.txt  pyproject.toml  pytest.ini  ruff.toml  test_document.txt
examples/: entity_caching_demo.py  json_config_demo.py  performance_benchmark.py  rec_ai.txt  sample_bill.txt  strict_vs_lenient_demo.py  test_robust_json_parser.py
scripts/: cleanup.py  lepola_cli.py  migrate_entity_caching.py  pipeline.sh  validate_setup.py
src/: main.py
src/ai/: embeddings.py  embeddings_service.py  mock_embeddings.py
src/core/: config.py  database.py  logging.py  models.py  repository.py
src/ingestion/: embedding.py  router.py  service.py
src/outputs/: router.py
src/pipeline/: mock_llm.py  router.py  service.py
src/querying/: router.py
src/utils/: model_selector.py  robust_json_parser.py
tests/: test_config.py  test_ingestion.py  test_main.py  test_pipeline_integration.py
tests/integration/: test_ingestion_integration.py  test_pdf_date_integration.py  test_pipeline_integration.py
tests/unit/: test_embedding.py  test_entity_extraction.py  test_ingestion.py  test_pipeline_fast.py
